more issues with overflowx scrolling, removed

--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,12 @@ body {
   padding: 0;
   max-width: 100% !important;
   font-family: monospace;
-  -webkit-overflow-scrolling: auto; }
+  /* -webkit-overflow-scrolling: auto; */ }
   @media (min-width: 350px) and (max-width: 819px) {
     body body {
       max-width: 100vw !important; } }
 
 .container {
-  overflow-x: hidden;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -25,7 +24,8 @@ body {
 html {
   padding: 0;
   margin: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  scroll-behavior: smooth; }
 
 span {
   font-family: monospace; }
@@ -99,6 +99,9 @@ a:hover {
   height: 100vh;
   width: 98vw;
   background-size: contain; }
+
+.title-container {
+  position: relative; }
 
 .vintage__container {
   display: inline-block;
@@ -239,7 +242,7 @@ a:hover {
   margin: 0; }
   @media (min-width: 350px) and (max-width: 819px) {
     .scene {
-      overflow-x: hidden !important;
+      /*  overflow-x: hidden !important; */
       max-width: 100%;
       position: absolute;
       background-size: cover;
@@ -252,40 +255,29 @@ a:hover {
   background-image: url("./images/layer3.png");
   height: 100vh;
   width: 100vw;
-  background-size: cover;
+  background-size: contain;
+  background-position-x: 1200px;
   z-index: 1; }
-  @media (min-width: 350px) and (max-width: 819px) {
-    .layer1 {
-      height: 200vh;
-      width: 200vw; } }
 
 .layer2 {
   overflow-x: hidden !important;
   position: absolute;
-  top: 0;
+  top: 0px;
   left: 0;
   background-image: url("./images/l1.png");
   height: 100vh;
-  width: 100vw;
+  width: 80vw;
   background-size: contain; }
-  @media (min-width: 350px) and (max-width: 819px) {
-    .layer2 {
-      height: 200vh;
-      width: 200vw; } }
 
 .layer3 {
   overflow-x: hidden !important;
   position: absolute;
-  top: 0;
+  top: 0px;
   left: 0;
   background-image: url("./images/l2.png");
   height: 100vh;
-  width: 100vw;
+  width: 80vw;
   background-size: contain; }
-  @media (min-width: 350px) and (max-width: 819px) {
-    .layer3 {
-      height: 200vh;
-      width: 200vw; } }
 
 .layer4 {
   overflow-x: hidden !important;
@@ -294,30 +286,23 @@ a:hover {
   left: 0;
   background-image: url("./images/l3.png");
   height: 100vh;
-  width: 100vw;
+  width: 80vw;
   background-size: contain; }
-  @media (min-width: 350px) and (max-width: 819px) {
-    .layer4 {
-      height: 200vh;
-      width: 200vw; } }
 
 .layer5 {
-  overflow: hidden !important;
+  overflow-x: hidden !important;
   position: absolute;
   top: 0;
   left: 0;
   background-image: url("./images/l4.png");
   height: 100vh;
-  width: 100vw;
+  width: 80vw;
   background-size: contain; }
-  @media (min-width: 350px) and (max-width: 819px) {
-    .layer5 {
-      height: 200vh;
-      width: 200vw; } }
 
 .ianjojo {
-  top: 150px;
-  left: 280px; }
+  position: absolute;
+  top: 10px;
+  left: 150px; }
   @media (min-width: 350px) and (max-width: 819px) {
     .ianjojo {
       top: 10px;
@@ -327,16 +312,18 @@ a:hover {
       top: 120px;
       left: 130px; } }
 
-@media (min-width: 350px) and (max-width: 819px) {
-  .sig {
-    left: 240px;
-    top: 150px;
-    font-size: 12px; } }
-
-@media only screen and (min-width: 820px) and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) {
-  .sig {
-    top: 270px;
-    left: 450px; } }
+.sig {
+  position: absolute;
+  display: none; }
+  @media (min-width: 350px) and (max-width: 819px) {
+    .sig {
+      left: 240px;
+      top: 150px;
+      font-size: 12px; } }
+  @media only screen and (min-width: 820px) and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) {
+    .sig {
+      top: 270px;
+      left: 450px; } }
 
 .title {
   color: #e6c8a0;
@@ -753,11 +740,9 @@ a:hover {
 
 .contact {
   width: 100vw;
-  padding-top: 100px;
   z-index: 2;
   display: flex;
   flex-direction: column;
-  height: 90vh;
   background-image: url("./images/bg5.jpg");
   background-size: cover; }
   @media (min-width: 350px) and (max-width: 819px) {
@@ -827,6 +812,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  width: 100%;
   height: 200px;
   position: relative;
   z-index: 5; }
@@ -1026,8 +1012,9 @@ li:hover {
       left: 0; } }
 
 .ghost {
+  display: none;
   position: absolute;
-  right: 200px;
+  left: 100px;
   top: 500px; }
   @media (min-width: 350px) and (max-width: 819px) {
     .ghost {
