--- a/styles/partials/Contact.scss
+++ b/styles/partials/Contact.scss
@@ -1,10 +1,10 @@
 .contact {
   width: 100vw;
-  padding-top: 100px;
+
   z-index: 2;
   display: flex;
   flex-direction: column;
-  height: 90vh;
+  // height: 90vh;
   background-image: url("./images/bg5.jpg");
   background-size: cover;
 
