--- a/styles/partials/Footer.scss
+++ b/styles/partials/Footer.scss
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-
+  width: 100%;
   height: 200px;
   position: relative;
   z-index: 5;
